# GeneralInfoProblem

./: FINAL_CONCLUSION.md  LICENSE  QA.md  README.md  temp.md  ИзследванеТеорияИнформационнаСкорост.md  КритичноПрозрение_GW.md  Резюме.md  ФИНАЛНО_ЗАКЛЮЧЕНИЕ.md  ФазовиПреходиВакуум.md  ЧатКопие.md
bg/final/: ЕксперименталниПротоколи.md  МатематическаФормализация.md  ОкончателноОбобщение.md  ФиналноОбобщение.md
bg/insights/: EM&Energy.md  ЖертвениИнтерфейси.md  ИлюзияАбсолютнаГраница.md  КонтактниТочки.md  МащабнаНесъвместимост.md  УниверсалностФормули.md
en/core/: 01_MultipleInformationSpaces.md  02_Summary.md
en/final/: ExperimentalProtocols.md  FinalSummary.md  MathematicalFormalization.md
en/insights/: 02_MeasurementAsProjection.md  03_VacuumPhaseTransitions.md  04_UniversalityOfFormulas.md  05_EMConfinement.md  06_ContactPoints.md  07_ScaleIncompatibility.md  08_SacrificialInterfaces.md
infospace/: README.md  __init__.py  pyproject.toml
infospace/core/: __init__.py  constants.py  energy.py  space.py
infospace/examples/: lhc_simulation.py
infospace/interactions/: __init__.py  contact_point.py
infospace/tests/: test_spaces.py
infospace/transforms/: __init__.py  lorentz.py  projection.py
